# byrd

./: .gitignore  configure.ac
c++-autotools/: Makefile.am
c++/testmat/: Makefile  main.C
ruby-gsl/: README.markdown
